# contextual-evolution-of-heuristics

./: .gitignore  Dockerfile  LICENSE  README.md  ceoh_run_docker.sh  ceoh_run_local.sh  pyproject.toml  requirements.txt  setup_workspace.sh
.github/workflows/: build.yaml  docker.yaml
docs/samples/: sample_env
eoh_experiment/: README.md
src/bay/: access_bay.py  access_point.py  sink.py  source.py  virtual_lane.py  warehouse.py
src/eoh/: __main__.py  eoh.py
src/preprocessing/: layout_to_bays.py
warehouse_layouts/: Size_10x10_Layout_10x10.csv  Size_10x10_Layout_11x11.csv  Size_10x10_Layout_1x1.csv  Size_10x10_Layout_2x2.csv  Size_10x10_Layout_3x3.csv  Size_10x10_Layout_4x4.csv  Size_10x10_Layout_5x5.csv  Size_10x10_Layout_6x6.csv  Size_10x10_Layout_7x7.csv  Size_10x10_Layout_8x8.csv  Size_10x10_Layout_9x9.csv  Size_11x11_Layout_10x10.csv  Size_11x11_Layout_11x11.csv  Size_11x11_Layout_1x1.csv  Size_11x11_Layout_2x2.csv  Size_11x11_Layout_3x3.csv  Size_11x11_Layout_4x4.csv  Size_11x11_Layout_5x5.csv  Size_11x11_Layout_6x6.csv  Size_11x11_Layout_7x7.csv  Size_11x11_Layout_8x8.csv  Size_11x11_Layout_9x9.csv  Size_3x3_Layout_10x10.csv  Size_3x3_Layout_11x11.csv  Size_3x3_Layout_12x12.csv  Size_3x3_Layout_13x13.csv  Size_3x3_Layout_14x14.csv  Size_3x3_Layout_1x1.csv  Size_3x3_Layout_2x2.csv  Size_3x3_Layout_3x3.csv  Size_3x3_Layout_4x4.csv  Size_3x3_Layout_5x5.csv  Size_3x3_Layout_6x6.csv  Size_3x3_Layout_7x7.csv  Size_3x3_Layout_8x8.csv  Size_3x3_Layout_9x9.csv  Size_4x4_Layout_10x10.csv  Size_4x4_Layout_11x11.csv  Size_4x4_Layout_1x1.csv  Size_4x4_Layout_2x2.csv  (+62 more)
(+37 files in other folders)
